[tool.poetry]
name = "pdf utility belt"
version = "0.1.0"
description = "gui for your pdf needs"
authors = ["Vatsal Parekh <contact@vatsalparekh.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.1"
loguru = "^0.6.0"
pikepdf = "^5.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
